percent font spacing fix

--- a/app/assets/stylesheets/responses.scss
+++ b/app/assets/stylesheets/responses.scss
@@ -7,6 +7,10 @@
   .card-text {
     font-size:32px;
     padding-bottom:2rem;
+    line-height: 2rem;
+  }
+  .percent-text{
+    font-size: 25px;
   }
   .slider {
     width:40%;
